<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cwins.cardgame.MenuActivity"
    android:background="@drawable/menu_background"
    android:keepScreenOn="true"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:textColor="#ffffff"
            android:text="@string/invite_players"
            android:id="@+id/invite_players_button"
            android:clickable="true"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginBottom="45dp"
            android:onClick="invitePlayers"
            android:background="@drawable/invite_menu_button_focused"
            android:paddingTop="7dp"
            android:paddingBottom="9dp"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:textColor="#ffffff"
            android:text="@string/current_games"
            android:id="@+id/current_games_button"
            android:clickable="true"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginBottom="45dp"
            android:background="@drawable/current_menu_button_focused"
            android:paddingTop="7dp"
            android:paddingBottom="9dp"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:textColor="#ffffff"
            android:text="@string/pending_invites"
            android:id="@+id/invites_button"
            android:clickable="true"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@drawable/pending_menu_button_focused"
            android:paddingTop="7dp"
            android:paddingBottom="9dp"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:typeface="monospace"
        android:id="@+id/signin_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:background="@drawable/sign_in_button_normal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:typeface="monospace"
        android:id="@+id/signout_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:textColor="#ffffff"
        android:background="@drawable/small_menu_button_focused"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/settings_button"
        android:text="@string/cheevos"
        android:typeface="monospace"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="#ffffff"
        android:background="@drawable/small_menu_button_focused"
        android:visibility="gone"
         />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/settings"-->
        <!--android:id="@+id/settings_button"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:textColor="#ffffff"-->
        <!--android:background="@drawable/small_menu_button_normal"/>-->


</RelativeLayout>
