<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blue_back"
    tools:context="cwins.cardgame.MainActivity">

    <RelativeLayout
        android:id="@+id/main_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/exit"
            android:typeface="monospace"
            android:background="@drawable/skip_button_focused"
            android:id="@+id/suspend_main_button"
            android:layout_alignParentLeft="true"
            android:textSize="18sp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:paddingTop="8.5dp"
            android:paddingBottom="8.5dp"
            android:textColor="#ffa2a8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="25sp"
            android:typeface="monospace"
            android:textStyle="bold|italic"
            android:text=""
            android:id="@+id/current_round_main"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/scores"
            android:id="@+id/scores_main_button"
            android:background="@drawable/skip_button_focused"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:paddingTop="8.5dp"
            android:paddingBottom="8.5dp"
            android:textColor="#8dff86"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_ready_lights"
        android:layout_below="@id/main_bar"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        >

        <!-- Populate this dynamically depending on number of opponents -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/high_card_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/holdem_choice"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/high_card_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/reset_selections_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/high_card_choice"
        android:text="@string/reset"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/skip_button_focused"
        android:textSize="18sp"
        android:paddingTop="8.5dp"
        android:paddingBottom="8.5dp"
        android:textColor="#86ffed"
        />

    <Button
        android:id="@+id/ready_choices_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_selections_button"
        android:background="@drawable/unready_circle_lg"
        android:layout_centerHorizontal="true"
         />

    <LinearLayout
        android:id="@+id/holdem_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/omaha_choice"
        android:gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="5dp"
        >

        <ImageView
            android:id="@+id/holdem_main_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <ImageView
            android:id="@+id/holdem_main_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/omaha_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/hole_cards"
        android:layout_marginBottom="45dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/omaha_main_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <ImageView
            android:id="@+id/omaha_main_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <ImageView
            android:id="@+id/omaha_main_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <ImageView
            android:id="@+id/omaha_main_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hole_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        >

        <!--<ImageView-->
            <!--android:id="@+id/hole_card_1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:id="@+id/hole_card_2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:id="@+id/hole_card_3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:id="@+id/hole_card_4"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:id="@+id/hole_card_5"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:id="@+id/hole_card_6"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:id="@+id/hole_card_7"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->

    </LinearLayout>

</RelativeLayout>